[tool.poetry]
name = "sisifo"
version = "0.1.0"
description = "Task runner"
authors = ["guiferviz <guiferviz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
